# calendrome

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  netlify.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vite.playground.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json
docs/: demo-script.md  reclaim-to-google-mapping.md
e2e/: drag.spec.ts  playground.spec.ts
plugin/: LICENSE  README.md
scripts/: extract-docs.mjs  migrate-to-time-entry.ts  netlify-ignore.sh
src/: assignments.ts  availability.ts  budgets.ts  calendar-sync.ts  categories.ts  day-range.ts  demo-seed.ts  goals.ts  habits.ts  inbox.ts  meeting-mappings.ts  placement.ts  projects.ts  supply.ts  tasks.ts  time-entry.ts  time-log.ts  timesheet.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: assignments.test.ts  availability.test.ts  budgets.test.ts  calendar-sync.test.ts  categories.test.ts  day-range.test.ts  docs-extractor.test.ts  goals.test.ts  gui-budget-data.test.ts  gui-http.test.ts  gui-mutations.test.ts  gui-route.test.ts  gui-tasks-data.test.ts  gui-week-data.test.ts  gui-weekdays-tz.test.ts  habits.test.ts  inbox.test.ts  mcp-call-tool.test.ts  mcp-tools.test.ts  meeting-mappings.test.ts  migration-to-time-entry.test.ts  projects.test.ts  range-parity.test.ts  setup-engine.ts  sqljs-adapter.test.ts  supply.test.ts  tasks.test.ts  time-entry.test.ts  time-log.test.ts  timesheet.test.ts
website/: docs.html  (+1 more)
(+87 files in other folders)
