[package]
name = "calendrome"
version = "0.1.0"
description = "Calendrome — native desktop shell for the local weekly planner"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
